# OpenConverter

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  QT-setup.md  Qt.md  README.en.md  README.md  README_ZH.md  Windows-command.md  contribution_evaluation.py  converter.cpp  converter.h  encode_setting.cpp  encode_setting.h  encode_setting.ui  format.sh  git-command.md  info.cpp  info.h  llvm-style-check.yml  main.cpp  open_converter.cpp  open_converter.pro  quick_info.pro  sonar-project.properties  stream_context.cpp  stream_context.h  test-8.cpp  test.cpp  transcoder.cpp  transcoder.h  transcoder_ffmpeg.cpp  transcoder_fftool.cpp  widget.cpp  widget.h  widget.ui
.github/workflows/: ci.yaml  ci.yml  contribution_evaluation.yaml  llvm-style-check.yml  release.yaml  review.yaml  review_mac.yaml  review_win.yaml
doc/: CompileGuide.md  OpenConverter_Deploy.md  OpenConverter_Package_Windows.md  OpenConverter_Usage.md  Qt.md
project/: core.cpp  core.h  info.cpp  quick_info.pro  widget.cpp  widget.h
project_jack_lau/Projects/Dialog_Box/: Dialog_Box.pro
project_jack_lau/Projects/QMainWindows/: mainwindow.cpp  mainwindow.h
project_jack_lau/Projects/UIengineering/: UIengineering.pro  widget.cpp  widget.h  widget.ui
project_jack_lau/Projects/build-Dialog_Box-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-Dialog_Box-Desktop_Qt_5_11_3_MinGW_32bit-Debug/debug/: moc_widget.cpp
project_jack_lau/Projects/build-UIengineering-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
project_jack_lau/Projects/build-UIengineering-Desktop_Qt_5_11_3_MinGW_32bit-Debug/debug/: moc_widget.cpp
project_jack_lau/Projects/build-calc-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-calc-Desktop_Qt_5_11_3_MinGW_32bit-Debug/debug/: moc_widget.cpp
project_jack_lau/Projects/build-groupbox_test-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-groupbox_test-Desktop_Qt_5_11_3_MinGW_32bit-Debug/debug/: moc_widget.cpp
project_jack_lau/Projects/build-mycalculator-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-mycalculator-Desktop_Qt_5_11_3_MinGW_32bit-Debug/debug/: moc_widget.cpp
project_jack_lau/Projects/build-output_test-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-output_test-Desktop_Qt_5_11_3_MinGW_32bit-Debug/debug/: moc_widget.cpp
project_jack_lau/Projects/build-qq-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-qq-Desktop_Qt_5_11_3_MinGW_32bit-Debug/debug/: moc_widget.cpp
project_jack_lau/Projects/build-qq_test-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-qq_test-Desktop_Qt_5_11_3_MinGW_32bit-Debug/debug/: moc_widget.cpp
project_jack_lau/Projects/build-raid-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-test-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-testApp-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/build-test_system-Desktop_Qt_5_11_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
project_jack_lau/Projects/calc/: calc.pro  widget.cpp  widget.h
project_jack_lau/Projects/gobang_test/: gobang_test.pro  main.cpp  widget.cpp  widget.h
project_jack_lau/Projects/groupbox_test/: groupbox_test.pro  widget.cpp  widget.h
project_jack_lau/Projects/mycalculator/: widget.cpp
project_jack_lau/Projects/output_test/: output_test.pro  widget.cpp  widget.h
project_jack_lau/Projects/qq/: qq.pro  widget.cpp  widget.h
project_jack_lau/Projects/qq_test/: qq_test.pro  widget.cpp  widget.h
project_jack_lau/Projects/raid/: raid.pro  widget.cpp  widget.h
project_jack_lau/Projects/test/: test.pro  widget.cpp  widget.h
project_jack_lau/Projects/testApp/: choicequestion.cpp  choicequestion.h  mydialog.cpp  mydialog.h  testApp.pro  testApp.pro.user.bfb881c  widget.cpp  widget.h
project_jack_lau/Projects/test_system/: test_system.pro  test_system.pro.user.0c84b5d.4.8-pre1  widget.cpp  widget.h
project_learn/Calculator/: mycalculator.pro  widget.h
project_learn/Dialog_Box/: widget.cpp  widget.h
scripts/: README.md  quality_rate.py  workload_analyzation.py
src/: CMakeLists.txt  converter.cpp  converter.h  encode_parameter.cpp  encode_parameter.h  encode_setting.cpp  encode_setting.h  info.cpp  info.h  lang.qrc  lang_chinese.ts  main.cpp  open_converter.cpp  open_converter.h  open_converter.pro  process_parameter.cpp  process_parameter.h  stream_context.cpp  stream_context.h  transcoder.cpp  transcoder.h  transcoder_bmf.cpp  transcoder_bmf.h
src/OpenConverter1.0/: encode_setting.ui
src/OpenConverter_v1.1/: README.md  converter.cpp  encode_parameter.cpp  encode_parameter.h  encode_setting.cpp  encode_setting.h  info.h  process_parameter.h  transcoder.h  widget.cpp  widget.h  widget.ui
src/builder/include/: encode_setting.h  open_converter.h
src/builder/src/: encode_setting.cpp  encode_setting.ui  open_converter.cpp  open_converter.ui
src/common/include/: common.h  encode_parameter.h  info.h  process_observer.h  process_parameter.h  stream_context.h
src/common/src/: encode_parameter.cpp  info.cpp  process_parameter.cpp  stream_context.cpp
src/engine/include/: converter.h
src/engine/src/: converter.cpp
src/resources/: lang_chinese.qm
src/tests/: CMakeLists.txt  transcoder_test.cpp
src/transcoder/include/: transcoder.h  transcoder_bmf.h  transcoder_ffmpeg.h  transcoder_fftool.h
src/transcoder/src/: transcoder.cpp  transcoder_bmf.cpp  transcoder_ffmpeg.cpp  transcoder_fftool.cpp
tool/: format.sh  setup_test_deps.sh
(+5 files in other folders)
